# mzxscreen

./: Cargo.toml  mktweet.sh  random.sh
capture/: Cargo.toml
capture/src/: main.rs
info/: Cargo.toml
info/src/: main.rs
populate/: Cargo.toml
populate/src/: main.rs
src/: main.rs
tweet/: Cargo.toml
tweet/src/: main.rs
